--- a/Syntax__of__len()__function.ipynb
+++ b/Syntax__of__len()__function.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOCu7gw5HHBzC6QDg3VdrKP",
+      "authorship_tag": "ABX9TyM2HQr/cQgXJA7JNOKWoutD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,29 +33,25 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "TEc5WjmNaFlI",
-        "outputId": "8624d8a4-d349-45fc-f8ab-4d266d296f52"
+        "id": "AgmbyFjHfDQQ",
+        "outputId": "536a7e20-2c44-4822-ba9f-961e4b01d617"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4\n",
-            "4\n",
-            "3\n"
+            "13\n"
           ]
         }
       ],
       "source": [
-        "a = ['geeks', 'for', 'geeks', 2022]\n",
-        "print(len(a))  # List length\n",
+        "s = \"GeeksforGeeks\"\n",
         "\n",
-        "b = (1, 2, 3, 4)\n",
-        "print(len(b))  # Tuple length\n",
+        "# Get length of the string\n",
+        "l = len(s)\n",
         "\n",
-        "c = {\"name\": \"Alice\", \"age\": 30, \"city\": \"New York\"}\n",
-        "print(len(c))  # Dict keys"
+        "print(l)"
       ]
     }
   ]
